# UniBoCG23-Elaborato-1

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: proiettile.herm
docs/: UniboCG23-Elaborato-I Presentazione.pptx
lib/freetype/: CMakeLists.txt
resources/models/hermite/: sottomarino.herm
resources/shaders/elab1/: world.frag  world.vert
src/: altmain.cpp  context.cpp  context.hpp  engine.cpp  engine.hpp  initdata.hpp  main.cpp  module.hpp  object.cpp  object.hpp  physicsmanager.cpp  physicsmanager.hpp  scene.cpp  scene.hpp  subsystem.hpp  templates.txt
src/behaviours/: charactercontroller.cpp  charactercontroller.hpp  enemy.cpp  enemy.hpp  gamecontroller.cpp  gamecontroller.hpp  ibehaviour.hpp  projectile.cpp  projectile.hpp
src/behaviours/data/: firstgamedata.cpp  firstgamedata.hpp
src/behaviours/physics/: rectangularcollider.cpp  rectangularcollider.hpp
src/exceptions/: initializationexception.cpp  initializationexception.hpp  invalidbehaviourexception.cpp  invalidbehaviourexception.hpp  invalidfontexception.cpp  invalidfontexception.hpp  invalidobjectexception.cpp  invalidobjectexception.hpp  multiplecolliderexception.cpp  multiplecolliderexception.hpp
src/geometry/: camera.hpp  font.cpp  font.hpp  geometricentity.cpp  geometricentity.hpp  geometricscene.hpp  glutils.cpp  glutils.hpp  label.cpp  label.hpp  mesh.cpp  mesh.hpp  meshrenderer.cpp  meshrenderer.hpp  textrenderer.cpp  textrenderer.hpp  ui.cpp  ui.hpp
src/geometry/exceptions/: shadervarqueryexception.cpp  shadervarqueryexception.hpp
src/inputhandler/: input.hpp  simpleinputhandler.cpp  simpleinputhandler.hpp
src/lightweightutils/: identifiable.hpp  idprovider.cpp  idprovider.hpp  lwu.hpp
src/lightweightutils/exceptions/: nonexistantidexception.cpp  nonexistantidexception.hpp
src/lightweightutils/scheduling/: tickable.hpp
src/logger/: logger.cpp  logger.hpp
src/shaderloader/: rawshader.cpp  rawshader.hpp  shader.cpp  shader.hpp  shaderloader.cpp  shaderloader.hpp  shadermanager.cpp  shadermanager.hpp
src/shaderloader/exceptions/: invalidshaderexception.cpp  invalidshaderexception.hpp  shadercreationexception.cpp  shadercreationexception.hpp  shadernotinitializedexception.cpp  shadernotinitializedexception.hpp  shaderreadingexception.cpp  shaderreadingexception.hpp
src/simplemath/: hermitecurve.cpp  hermitecurve.hpp  hermiteparser.cpp  hermiteparser.hpp  simplemath.cpp  simplemath.hpp
